python-apt (0.7.100.1) UNRELEASED; urgency=low

  * python/generic.h:
    - set Object to NULL in CppDeallocPtr
  * python/depcache.cc:
    - don't run "actiongroup.release()" if the object was already
      deallocated
  * apt/progress/text.py:
    - only run ioctl for termios.TIOCGWINSZ if the fd is a tty
    
 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 07 Dec 2010 13:41:07 +0100

python-apt (0.7.100) unstable; urgency=low

  * Final 0.7.100 release; targeted at Squeeze.
  * apt/debfile.py:
    - Replace (undocumented) use of python-debian debfile.DebFile API with
      the equivalent apt_inst.DebFile API (Closes: #603043)
  * apt/package.py:
    - Fix docstring of Package.mark_delete() (Closes: #599042)
  * doc:
    - Various documentation updates.
    - The C++ API/ABI is stable now.
  * po
    - Update sl.po (Closes: #603359)

 -- Julian Andres Klode <jak@debian.org>  Wed, 17 Nov 2010 16:53:55 +0100

python-apt (0.7.98.1) unstable; urgency=low

  [ Piotr Ozarowski ]
  * Use dh_python3 to handle Python 3 files
    - bump minimum required versions of python-central and python3-all-dev
    - add new python3-apt, python3-apt-bdg and python-common binary packages
  * Replace python-central with dh_python2

 -- Michael Vogt <mvo@debian.org>  Wed, 29 Sep 2010 20:38:25 +0200

python-apt (0.7.98) unstable; urgency=low

  [ Michael Vogt ]
  * python/acquire.cc:
    - return long long when calling TotalNeeded(), FetchNeeded() and
      PartialPresent() from pkgAcquire(). This follows the change
      in libapt.
  * apt/debfile.py:
    - add missing init for _installed_conflicts (LP: #618597)
  * add "provides" property to the apt.Version objects
  * apt/debfile.py:
    - fix error when reading binary content and add regresion test
  * merged patch from Samuel Lidén Borell to fix crash if there utf8 
    in the control file (LP: #624290) and add test
  * apt/cache.py:
    - add "sources_list" parameter to cache.update() to force updating